# Surfer-Data

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_GUIDE.MD  analytics.js  asdfasdfasdf  openai.js  package-lock.json  package.json  platforms.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.erb/configs/: webpack.config.base.ts  webpack.config.main.prod.ts  webpack.config.preload.dev.ts  webpack.config.renderer.prod.ts
.erb/scripts/: notarize.js
assets/: icon.icns  imessage_mac.py  imessage_windows.py  index_chroma_windows.py  password-prompt.html
cookbook/python/: README.md  bookmarks.py  gmail.py  imessage.py  timeline.py
desktop/: .eslintrc.js  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
desktop-app/assets/: imessage_windows.py  imessage_windows_reqs.txt
desktop-app/docs/: ADD_PLATFORMS.md
desktop/assets/: icon.icns  imessage_mac.py  imessage_windows.py  search_vector_db.py  vector_db.py  vectorize.py
docs/: ADD_PLATFORMS.md  CHANGELOG.md  HELPER_FUNCTIONS.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  typography.js
docs/src/: helpers.js
example/: README.md  pyproject.toml
example/src/example/: __init__.py  server.py
landing/: .firebaserc  index.html  package-lock.json  package.json  tailwind.config.js
landing/.firebase/: hosting.ZGlzdA.cache
patches/: pdf-parse+1.1.1.patch
python-sdk/: app.py  bookmarks.py  gmail.py  imessage.py  setup.py
src/: firebase.js
surfer_mcp/: README.md  pyproject.toml
surfer_mcp/src/surfer_mcp/: server.py
(+336 files in other folders)
