[project]
name = "example"
version = "0.1.0"
description = "example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.1.2",]
[[project.authors]]
name = "Sahil Lalani"
email = "99920148+sahil-lalani@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
example = "example:main"
